# SGJ-B-FreshProGalleries

./: .gitignore  .python-version  LICENSE  Readme.md  macinvoke.sh  main.py  mappings.json  pyproject.toml  scratch_minify.py
src/: GalleryBuilder.py
